Compiler/parser.output
Terminals unused in grammar

   INLINE
   BOOL
   COMPLEX
   IMAGINARY
   ELLIPSIS


Rules useless in parser due to conflicts

   55 declaration: declaration_specifiers init_declarator_list ';'

  127 $@8: /* empty */

  129 $@9: /* empty */

  131 $@10: /* empty */


State 25 conflicts: 1 shift/reduce
State 26 conflicts: 1 shift/reduce
State 62 conflicts: 46 reduce/reduce
State 71 conflicts: 1 shift/reduce
State 72 conflicts: 1 shift/reduce
State 143 conflicts: 3 reduce/reduce
State 148 conflicts: 1 shift/reduce
State 188 conflicts: 2 reduce/reduce
State 195 conflicts: 1 reduce/reduce
State 278 conflicts: 2 reduce/reduce
State 328 conflicts: 1 shift/reduce


Grammar

    0 $accept: translation_unit $end

    1 translation_unit: external_declaration
    2                 | translation_unit external_declaration

    3 external_declaration: function_definition
    4                     | declaration

    5 function_definition: declaration_specifiers declarator compound_statement

    6 declaration: declaration_specifiers attribute_specifier init_declarator_list ';'
    7            | declaration_specifiers init_declarator_list ';'

    8 declaration_specifiers: type_specifier
    9                       | type_specifier declaration_specifiers
   10                       | storage_class_specifier declaration_specifiers
   11                       | storage_class_specifier

   12 attribute_specifier: MS_CDECL
   13                    | MS_STDCALL

   14 init_declarator_list: init_declarator
   15                     | init_declarator ',' init_declarator_list

   16 init_declarator: declarator
   17                | declarator '=' initializer

   18 storage_class_specifier: TYPEDEF
   19                        | EXTERN
   20                        | STATIC
   21                        | AUTO
   22                        | REGISTER

   23 type_specifier: VOID
   24               | CHAR
   25               | SHORT
   26               | INT
   27               | LONG
   28               | FLOAT
   29               | DOUBLE
   30               | INT64
   31               | SIGNED
   32               | UNSIGNED
   33               | struct_or_union_specifier
   34               | enum_specifier
   35               | IDENTIFIER

   36 type_qualifier: CONST
   37               | VOLATILE
   38               | RESTRICT

   39 declarator: pointer direct_declarator
   40           | direct_declarator

   41 direct_declarator: IDENTIFIER
   42                  | '(' declarator ')'
   43                  | direct_declarator '(' ')'
   44                  | direct_declarator '(' parameter_list ')'
   45                  | direct_declarator '[' ']'
   46                  | direct_declarator '[' constant_expression ']'

   47 pointer: '*'
   48        | '*' type_qualifier_list
   49        | '*' pointer
   50        | '*' type_qualifier_list pointer

   51 parameter_list: parameter_declaration
   52               | parameter_declaration ',' parameter_list

   53 type_qualifier_list: type_qualifier
   54                    | type_qualifier_list type_qualifier

   55 declaration: declaration_specifiers init_declarator_list ';'

   56 enum_specifier: ENUM '{' enumerator_list '}'
   57               | ENUM IDENTIFIER '{' enumerator_list '}'
   58               | ENUM IDENTIFIER

   59 enumerator_list: enumerator
   60                | enumerator ',' enumerator_list

   61 enumerator: IDENTIFIER
   62           | IDENTIFIER '=' constant_expression

   63 struct_or_union_specifier: struct_or_union '{' struct_declaration_list '}'
   64                          | struct_or_union IDENTIFIER '{' struct_declaration_list '}'
   65                          | struct_or_union IDENTIFIER

   66 struct_or_union: STRUCT
   67                | UNION

   68 struct_declaration_list: struct_declaration
   69                        | struct_declaration struct_declaration_list

   70 struct_declaration: specifier_qualifier_list struct_declarator_list ';'

   71 specifier_qualifier_list: type_specifier
   72                         | type_specifier specifier_qualifier_list
   73                         | type_qualifier
   74                         | type_qualifier specifier_qualifier_list

   75 struct_declarator_list: struct_declarator
   76                       | struct_declarator_list ',' struct_declarator

   77 struct_declarator: declarator
   78                  | declarator ':' constant_expression

   79 parameter_declaration: declaration_specifiers declarator
   80                      | declaration_specifiers abstract_declarator
   81                      | declaration_specifiers

   82 abstract_declarator: pointer
   83                    | direct_abstract_declarator
   84                    | pointer direct_abstract_declarator

   85 direct_abstract_declarator: '(' abstract_declarator ')'
   86                           | direct_abstract_declarator '[' ']'
   87                           | direct_abstract_declarator '[' constant_expression ']'
   88                           | direct_abstract_declarator '(' parameter_list ')'
   89                           | '(' parameter_list ')'

   90 initializer: assignment_expression
   91            | '{' initializer_list '}'
   92            | '{' initializer_list ',' '}'

   93 initializer_list: initializer
   94                 | initializer ',' initializer_list

   95 type_name: specifier_qualifier_list
   96          | specifier_qualifier_list abstract_declarator

   97 statement: labeled_statement
   98          | compound_statement
   99          | expression_statement
  100          | selection_statement
  101          | iteration_statement
  102          | jump_statement

  103 compound_statement: '{' '}'

  104 $@1: /* empty */

  105 compound_statement: '{' $@1 block_item_list '}'

  106 block_item_list: block_item
  107                | block_item block_item_list

  108 block_item: declaration
  109           | statement

  110 $@2: /* empty */

  111 labeled_statement: IDENTIFIER $@2 ':' statement

  112 $@3: /* empty */

  113 labeled_statement: CASE $@3 constant_expression ':' statement

  114 $@4: /* empty */

  115 labeled_statement: DEFAULT $@4 ':' statement

  116 expression_statement: ';'
  117                     | expression ';'

  118 selection_statement: IF '(' expression ')' statement
  119                    | IF '(' expression ')' statement ELSE statement
  120                    | SWITCH '(' expression ')' statement

  121 $@5: /* empty */

  122 iteration_statement: WHILE $@5 '(' expression ')' statement

  123 $@6: /* empty */

  124 iteration_statement: DO $@6 statement WHILE '(' expression ')' ';'

  125 $@7: /* empty */

  126 iteration_statement: FOR $@7 '(' expression_statement expression_statement ')' statement

  127 $@8: /* empty */

  128 iteration_statement: FOR $@8 '(' expression_statement expression_statement expression ')' statement

  129 $@9: /* empty */

  130 iteration_statement: FOR $@9 '(' declaration expression_statement ')' statement

  131 $@10: /* empty */

  132 iteration_statement: FOR $@10 '(' declaration expression_statement expression ')' statement

  133 jump_statement: GOTO IDENTIFIER ';'
  134               | CONTINUE ';'
  135               | BREAK ';'
  136               | RETURN ';'
  137               | RETURN expression ';'

  138 expression: assignment_expression
  139           | expression ',' assignment_expression

  140 assignment_expression: conditional_expression
  141                      | unary_expression assignment_operator assignment_expression

  142 assignment_operator: '='
  143                    | MUL_ASSIGN
  144                    | DIV_ASSIGN
  145                    | MOD_ASSIGN
  146                    | ADD_ASSIGN
  147                    | SUB_ASSIGN
  148                    | LEFT_ASSIGN
  149                    | RIGHT_ASSIGN
  150                    | AND_ASSIGN
  151                    | XOR_ASSIGN
  152                    | OR_ASSIGN

  153 constant_expression: conditional_expression

  154 conditional_expression: logical_or_expression
  155                       | logical_or_expression '?' expression ':' conditional_expression

  156 logical_or_expression: logical_and_expression
  157                      | logical_or_expression OR_OP logical_and_expression

  158 logical_and_expression: inclusive_or_expression
  159                       | logical_and_expression AND_OP inclusive_or_expression

  160 exclusive_or_expression: and_expression
  161                        | exclusive_or_expression '^' and_expression

  162 inclusive_or_expression: exclusive_or_expression
  163                        | inclusive_or_expression '|' exclusive_or_expression

  164 and_expression: equality_expression
  165               | and_expression '&' equality_expression

  166 equality_expression: relational_expression
  167                    | equality_expression EQ_OP relational_expression
  168                    | equality_expression NE_OP relational_expression

  169 relational_expression: shift_expression
  170                      | relational_expression '<' shift_expression
  171                      | relational_expression '>' shift_expression
  172                      | relational_expression LE_OP shift_expression
  173                      | relational_expression GE_OP shift_expression

  174 shift_expression: additive_expression
  175                 | shift_expression LEFT_OP additive_expression
  176                 | shift_expression RIGHT_OP additive_expression

  177 additive_expression: multiplicative_expression
  178                    | additive_expression '+' multiplicative_expression
  179                    | additive_expression '-' multiplicative_expression

  180 multiplicative_expression: cast_expression
  181                          | multiplicative_expression '*' cast_expression
  182                          | multiplicative_expression '/' cast_expression
  183                          | multiplicative_expression '%' cast_expression

  184 cast_expression: unary_expression
  185                | '(' type_name ')' cast_expression

  186 unary_expression: postfix_expression
  187                 | INC_OP unary_expression
  188                 | DEC_OP unary_expression
  189                 | unary_operator cast_expression
  190                 | SIZEOF unary_expression
  191                 | SIZEOF '(' type_name ')'

  192 unary_operator: '&'
  193               | '*'
  194               | '+'
  195               | '-'
  196               | '~'
  197               | '!'

  198 postfix_expression: primary_expression
  199                   | postfix_expression '[' expression ']'
  200                   | postfix_expression '(' ')'
  201                   | postfix_expression '.' IDENTIFIER
  202                   | postfix_expression PTR_OP IDENTIFIER
  203                   | postfix_expression INC_OP
  204                   | postfix_expression DEC_OP

  205 primary_expression: IDENTIFIER
  206                   | CONSTANT
  207                   | STRING_LITERAL
  208                   | '(' expression ')'


Terminals, with rules where they appear

$end (0) 0
'!' (33) 197
'%' (37) 183
'&' (38) 165 192
'(' (40) 42 43 44 85 88 89 118 119 120 122 124 126 128 130 132 185
    191 200 208
')' (41) 42 43 44 85 88 89 118 119 120 122 124 126 128 130 132 185
    191 200 208
'*' (42) 47 48 49 50 181 193
'+' (43) 178 194
',' (44) 15 52 60 76 92 94 139
'-' (45) 179 195
'.' (46) 201
'/' (47) 182
':' (58) 78 111 113 115 155
';' (59) 6 7 55 70 116 117 124 133 134 135 136 137
'<' (60) 170
'=' (61) 17 62 142
'>' (62) 171
'?' (63) 155
'[' (91) 45 46 86 87 199
']' (93) 45 46 86 87 199
'^' (94) 161
'{' (123) 56 57 63 64 91 92 103 105
'|' (124) 163
'}' (125) 56 57 63 64 91 92 103 105
'~' (126) 196
error (256)
IDENTIFIER (258) 35 41 57 58 61 62 64 65 111 133 201 202 205
CONSTANT (259) 206
STRING_LITERAL (260) 207
SIZEOF (261) 190 191
PTR_OP (262) 202
INC_OP (263) 187 203
DEC_OP (264) 188 204
LEFT_OP (265) 175
RIGHT_OP (266) 176
LE_OP (267) 172
GE_OP (268) 173
EQ_OP (269) 167
NE_OP (270) 168
AND_OP (271) 159
OR_OP (272) 157
MUL_ASSIGN (273) 143
DIV_ASSIGN (274) 144
MOD_ASSIGN (275) 145
ADD_ASSIGN (276) 146
SUB_ASSIGN (277) 147
LEFT_ASSIGN (278) 148
RIGHT_ASSIGN (279) 149
AND_ASSIGN (280) 150
XOR_ASSIGN (281) 151
OR_ASSIGN (282) 152
TYPEDEF (283) 18
EXTERN (284) 19
STATIC (285) 20
AUTO (286) 21
REGISTER (287) 22
INLINE (288)
RESTRICT (289) 38
CHAR (290) 24
SHORT (291) 25
INT (292) 26
LONG (293) 27
SIGNED (294) 31
UNSIGNED (295) 32
FLOAT (296) 28
DOUBLE (297) 29
CONST (298) 36
VOLATILE (299) 37
VOID (300) 23
INT64 (301) 30
BOOL (302)
COMPLEX (303)
IMAGINARY (304)
STRUCT (305) 66
UNION (306) 67
ENUM (307) 56 57 58
ELLIPSIS (308)
CASE (309) 113
DEFAULT (310) 115
IF (311) 118 119
ELSE (312) 119
SWITCH (313) 120
WHILE (314) 122 124
DO (315) 124
FOR (316) 126 128 130 132
GOTO (317) 133
CONTINUE (318) 134
BREAK (319) 135
RETURN (320) 136 137
MS_CDECL (321) 12
MS_STDCALL (322) 13


Nonterminals, with rules where they appear

$accept (92)
    on left: 0
translation_unit (93)
    on left: 1 2, on right: 0 2
external_declaration (94)
    on left: 3 4, on right: 1 2
function_definition (95)
    on left: 5, on right: 3
declaration (96)
    on left: 6 7 55, on right: 4 108 130 132
declaration_specifiers (97)
    on left: 8 9 10 11, on right: 5 6 7 9 10 55 79 80 81
attribute_specifier (98)
    on left: 12 13, on right: 6
init_declarator_list (99)
    on left: 14 15, on right: 6 7 15 55
init_declarator (100)
    on left: 16 17, on right: 14 15
storage_class_specifier (101)
    on left: 18 19 20 21 22, on right: 10 11
type_specifier (102)
    on left: 23 24 25 26 27 28 29 30 31 32 33 34 35, on right: 8 9
    71 72
type_qualifier (103)
    on left: 36 37 38, on right: 53 54 73 74
declarator (104)
    on left: 39 40, on right: 5 16 17 42 77 78 79
direct_declarator (105)
    on left: 41 42 43 44 45 46, on right: 39 40 43 44 45 46
pointer (106)
    on left: 47 48 49 50, on right: 39 49 50 82 84
parameter_list (107)
    on left: 51 52, on right: 44 52 88 89
type_qualifier_list (108)
    on left: 53 54, on right: 48 50 54
enum_specifier (109)
    on left: 56 57 58, on right: 34
enumerator_list (110)
    on left: 59 60, on right: 56 57 60
enumerator (111)
    on left: 61 62, on right: 59 60
struct_or_union_specifier (112)
    on left: 63 64 65, on right: 33
struct_or_union (113)
    on left: 66 67, on right: 63 64 65
struct_declaration_list (114)
    on left: 68 69, on right: 63 64 69
struct_declaration (115)
    on left: 70, on right: 68 69
specifier_qualifier_list (116)
    on left: 71 72 73 74, on right: 70 72 74 95 96
struct_declarator_list (117)
    on left: 75 76, on right: 70 76
struct_declarator (118)
    on left: 77 78, on right: 75 76
parameter_declaration (119)
    on left: 79 80 81, on right: 51 52
abstract_declarator (120)
    on left: 82 83 84, on right: 80 85 96
direct_abstract_declarator (121)
    on left: 85 86 87 88 89, on right: 83 84 86 87 88
initializer (122)
    on left: 90 91 92, on right: 17 93 94
initializer_list (123)
    on left: 93 94, on right: 91 92 94
type_name (124)
    on left: 95 96, on right: 185 191
statement (125)
    on left: 97 98 99 100 101 102, on right: 109 111 113 115 118 119
    120 122 124 126 128 130 132
compound_statement (126)
    on left: 103 105, on right: 5 98
$@1 (127)
    on left: 104, on right: 105
block_item_list (128)
    on left: 106 107, on right: 105 107
block_item (129)
    on left: 108 109, on right: 106 107
labeled_statement (130)
    on left: 111 113 115, on right: 97
$@2 (131)
    on left: 110, on right: 111
$@3 (132)
    on left: 112, on right: 113
$@4 (133)
    on left: 114, on right: 115
expression_statement (134)
    on left: 116 117, on right: 99 126 128 130 132
selection_statement (135)
    on left: 118 119 120, on right: 100
iteration_statement (136)
    on left: 122 124 126 128 130 132, on right: 101
$@5 (137)
    on left: 121, on right: 122
$@6 (138)
    on left: 123, on right: 124
$@7 (139)
    on left: 125, on right: 126
$@8 (140)
    on left: 127, on right: 128
$@9 (141)
    on left: 129, on right: 130
$@10 (142)
    on left: 131, on right: 132
jump_statement (143)
    on left: 133 134 135 136 137, on right: 102
expression (144)
    on left: 138 139, on right: 117 118 119 120 122 124 128 132 137
    139 155 199 208
assignment_expression (145)
    on left: 140 141, on right: 90 138 139 141
assignment_operator (146)
    on left: 142 143 144 145 146 147 148 149 150 151 152, on right:
    141
constant_expression (147)
    on left: 153, on right: 46 62 78 87 113
conditional_expression (148)
    on left: 154 155, on right: 140 153 155
logical_or_expression (149)
    on left: 156 157, on right: 154 155 157
logical_and_expression (150)
    on left: 158 159, on right: 156 157 159
exclusive_or_expression (151)
    on left: 160 161, on right: 161 162 163
inclusive_or_expression (152)
    on left: 162 163, on right: 158 159 163
and_expression (153)
    on left: 164 165, on right: 160 161 165
equality_expression (154)
    on left: 166 167 168, on right: 164 165 167 168
relational_expression (155)
    on left: 169 170 171 172 173, on right: 166 167 168 170 171 172
    173
shift_expression (156)
    on left: 174 175 176, on right: 169 170 171 172 173 175 176
additive_expression (157)
    on left: 177 178 179, on right: 174 175 176 178 179
multiplicative_expression (158)
    on left: 180 181 182 183, on right: 177 178 179 181 182 183
cast_expression (159)
    on left: 184 185, on right: 180 181 182 183 185 189
unary_expression (160)
    on left: 186 187 188 189 190 191, on right: 141 184 187 188 190
unary_operator (161)
    on left: 192 193 194 195 196 197, on right: 189
postfix_expression (162)
    on left: 198 199 200 201 202 203 204, on right: 186 199 200 201
    202 203 204
primary_expression (163)
    on left: 205 206 207 208, on right: 198


state 0

    0 $accept: . translation_unit $end

    IDENTIFIER  shift, and go to state 1
    TYPEDEF     shift, and go to state 2
    EXTERN      shift, and go to state 3
    STATIC      shift, and go to state 4
    AUTO        shift, and go to state 5
    REGISTER    shift, and go to state 6
    CHAR        shift, and go to state 7
    SHORT       shift, and go to state 8
    INT         shift, and go to state 9
    LONG        shift, and go to state 10
    SIGNED      shift, and go to state 11
    UNSIGNED    shift, and go to state 12
    FLOAT       shift, and go to state 13
    DOUBLE      shift, and go to state 14
    VOID        shift, and go to state 15
    INT64       shift, and go to state 16
    STRUCT      shift, and go to state 17
    UNION       shift, and go to state 18
    ENUM        shift, and go to state 19

    translation_unit           go to state 20
    external_declaration       go to state 21
    function_definition        go to state 22
    declaration                go to state 23
    declaration_specifiers     go to state 24
    storage_class_specifier    go to state 25
    type_specifier             go to state 26
    enum_specifier             go to state 27
    struct_or_union_specifier  go to state 28
    struct_or_union            go to state 29


state 1

   35 type_specifier: IDENTIFIER .

    $default  reduce using rule 35 (type_specifier)


state 2

   18 storage_class_specifier: TYPEDEF .

    $default  reduce using rule 18 (storage_class_specifier)


state 3

   19 storage_class_specifier: EXTERN .

    $default  reduce using rule 19 (storage_class_specifier)


state 4

   20 storage_class_specifier: STATIC .

    $default  reduce using rule 20 (storage_class_specifier)


state 5

   21 storage_class_specifier: AUTO .

    $default  reduce using rule 21 (storage_class_specifier)


state 6

   22 storage_class_specifier: REGISTER .

    $default  reduce using rule 22 (storage_class_specifier)


state 7

   24 type_specifier: CHAR .

    $default  reduce using rule 24 (type_specifier)


state 8

   25 type_specifier: SHORT .

    $default  reduce using rule 25 (type_specifier)


state 9

   26 type_specifier: INT .

    $default  reduce using rule 26 (type_specifier)


state 10

   27 type_specifier: LONG .

    $default  reduce using rule 27 (type_specifier)


state 11

   31 type_specifier: SIGNED .

    $default  reduce using rule 31 (type_specifier)


state 12

   32 type_specifier: UNSIGNED .

    $default  reduce using rule 32 (type_specifier)


state 13

   28 type_specifier: FLOAT .

    $default  reduce using rule 28 (type_specifier)


state 14

   29 type_specifier: DOUBLE .

    $default  reduce using rule 29 (type_specifier)


state 15

   23 type_specifier: VOID .

    $default  reduce using rule 23 (type_specifier)


state 16

   30 type_specifier: INT64 .

    $default  reduce using rule 30 (type_specifier)


state 17

   66 struct_or_union: STRUCT .

    $default  reduce using rule 66 (struct_or_union)


state 18

   67 struct_or_union: UNION .

    $default  reduce using rule 67 (struct_or_union)


state 19

   56 enum_specifier: ENUM . '{' enumerator_list '}'
   57               | ENUM . IDENTIFIER '{' enumerator_list '}'
   58               | ENUM . IDENTIFIER

    IDENTIFIER  shift, and go to state 30
    '{'         shift, and go to state 31


state 20

    0 $accept: translation_unit . $end
    2 translation_unit: translation_unit . external_declaration

    $end        shift, and go to state 32
    IDENTIFIER  shift, and go to state 1
    TYPEDEF     shift, and go to state 2
    EXTERN      shift, and go to state 3
    STATIC      shift, and go to state 4
    AUTO        shift, and go to state 5
    REGISTER    shift, and go to state 6
    CHAR        shift, and go to state 7
    SHORT       shift, and go to state 8
    INT         shift, and go to state 9
    LONG        shift, and go to state 10
    SIGNED      shift, and go to state 11
    UNSIGNED    shift, and go to state 12
    FLOAT       shift, and go to state 13
    DOUBLE      shift, and go to state 14
    VOID        shift, and go to state 15
    INT64       shift, and go to state 16
    STRUCT      shift, and go to state 17
    UNION       shift, and go to state 18
    ENUM        shift, and go to state 19

    external_declaration       go to state 33
    function_definition        go to state 22
    declaration                go to state 23
    declaration_specifiers     go to state 24
    storage_class_specifier    go to state 25
    type_specifier             go to state 26
    enum_specifier             go to state 27
    struct_or_union_specifier  go to state 28
    struct_or_union            go to state 29


state 21

    1 translation_unit: external_declaration .

    $default  reduce using rule 1 (translation_unit)


state 22

    3 external_declaration: function_definition .

    $default  reduce using rule 3 (external_declaration)


state 23

    4 external_declaration: declaration .

    $default  reduce using rule 4 (external_declaration)


state 24

    5 function_definition: declaration_specifiers . declarator compound_statement
    6 declaration: declaration_specifiers . attribute_specifier init_declarator_list ';'
    7            | declaration_specifiers . init_declarator_list ';'
   55            | declaration_specifiers . init_declarator_list ';'

    IDENTIFIER  shift, and go to state 34
    MS_CDECL    shift, and go to state 35
    MS_STDCALL  shift, and go to state 36
    '('         shift, and go to state 37
    '*'         shift, and go to state 38

    attribute_specifier   go to state 39
    init_declarator_list  go to state 40
    init_declarator       go to state 41
    declarator            go to state 42
    direct_declarator     go to state 43
    pointer               go to state 44


state 25

   10 declaration_specifiers: storage_class_specifier . declaration_specifiers
   11                       | storage_class_specifier .

    IDENTIFIER  shift, and go to state 1
    TYPEDEF     shift, and go to state 2
    EXTERN      shift, and go to state 3
    STATIC      shift, and go to state 4
    AUTO        shift, and go to state 5
    REGISTER    shift, and go to state 6
    CHAR        shift, and go to state 7
    SHORT       shift, and go to state 8
    INT         shift, and go to state 9
    LONG        shift, and go to state 10
    SIGNED      shift, and go to state 11
    UNSIGNED    shift, and go to state 12
    FLOAT       shift, and go to state 13
    DOUBLE      shift, and go to state 14
    VOID        shift, and go to state 15
    INT64       shift, and go to state 16
    STRUCT      shift, and go to state 17
    UNION       shift, and go to state 18
    ENUM        shift, and go to state 19

    IDENTIFIER  [reduce using rule 11 (declaration_specifiers)]
    $default    reduce using rule 11 (declaration_specifiers)

    declaration_specifiers     go to state 45
    storage_class_specifier    go to state 25
    type_specifier             go to state 26
    enum_specifier             go to state 27
    struct_or_union_specifier  go to state 28
    struct_or_union            go to state 29


state 26

    8 declaration_specifiers: type_specifier .
    9                       | type_specifier . declaration_specifiers

    IDENTIFIER  shift, and go to state 1
    TYPEDEF     shift, and go to state 2
    EXTERN      shift, and go to state 3
    STATIC      shift, and go to state 4
    AUTO        shift, and go to state 5
    REGISTER    shift, and go to state 6
    CHAR        shift, and go to state 7
    SHORT       shift, and go to state 8
    INT         shift, and go to state 9
    LONG        shift, and go to state 10
    SIGNED      shift, and go to state 11
    UNSIGNED    shift, and go to state 12
    FLOAT       shift, and go to state 13
    DOUBLE      shift, and go to state 14
    VOID        shift, and go to state 15
    INT64       shift, and go to state 16
    STRUCT      shift, and go to state 17
    UNION       shift, and go to state 18
    ENUM        shift, and go to state 19

    IDENTIFIER  [reduce using rule 8 (declaration_specifiers)]
    $default    reduce using rule 8 (declaration_specifiers)

    declaration_specifiers     go to state 46
    storage_class_specifier    go to state 25
    type_specifier             go to state 26
    enum_specifier             go to state 27
    struct_or_union_specifier  go to state 28
    struct_or_union            go to state 29


state 27

   34 type_specifier: enum_specifier .

    $default  reduce using rule 34 (type_specifier)


state 28

   33 type_specifier: struct_or_union_specifier .

    $default  reduce using rule 33 (type_specifier)


state 29

   63 struct_or_union_specifier: struct_or_union . '{' struct_declaration_list '}'
   64                          | struct_or_union . IDENTIFIER '{' struct_declaration_list '}'
   65                          | struct_or_union . IDENTIFIER

    IDENTIFIER  shift, and go to state 47
    '{'         shift, and go to state 48


state 30

   57 enum_specifier: ENUM IDENTIFIER . '{' enumerator_list '}'
   58               | ENUM IDENTIFIER .

    '{'  shift, and go to state 49

    $default  reduce using rule 58 (enum_specifier)


state 31

   56 enum_specifier: ENUM '{' . enumerator_list '}'

    IDENTIFIER  shift, and go to state 50

    enumerator_list  go to state 51
    enumerator       go to state 52


state 32

    0 $accept: translation_unit $end .

    $default  accept


state 33

    2 translation_unit: translation_unit external_declaration .

    $default  reduce using rule 2 (translation_unit)


state 34

   41 direct_declarator: IDENTIFIER .

    $default  reduce using rule 41 (direct_declarator)


state 35

   12 attribute_specifier: MS_CDECL .

    $default  reduce using rule 12 (attribute_specifier)


state 36

   13 attribute_specifier: MS_STDCALL .

    $default  reduce using rule 13 (attribute_specifier)


state 37

   42 direct_declarator: '(' . declarator ')'

    IDENTIFIER  shift, and go to state 34
    '('         shift, and go to state 37
    '*'         shift, and go to state 38

    declarator         go to state 53
    direct_declarator  go to state 43
    pointer            go to state 44


state 38

   47 pointer: '*' .
   48        | '*' . type_qualifier_list
   49        | '*' . pointer
   50        | '*' . type_qualifier_list pointer

    RESTRICT  shift, and go to state 54
    CONST     shift, and go to state 55
    VOLATILE  shift, and go to state 56
    '*'       shift, and go to state 38

    $default  reduce using rule 47 (pointer)

    type_qualifier       go to state 57
    pointer              go to state 58
    type_qualifier_list  go to state 59


state 39

    6 declaration: declaration_specifiers attribute_specifier . init_declarator_list ';'

    IDENTIFIER  shift, and go to state 34
    '('         shift, and go to state 37
    '*'         shift, and go to state 38

    init_declarator_list  go to state 60
    init_declarator       go to state 41
    declarator            go to state 61
    direct_declarator     go to state 43
    pointer               go to state 44


state 40

    7 declaration: declaration_specifiers init_declarator_list . ';'
   55            | declaration_specifiers init_declarator_list . ';'

    ';'  shift, and go to state 62


state 41

   14 init_declarator_list: init_declarator .
   15                     | init_declarator . ',' init_declarator_list

    ','  shift, and go to state 63

    $default  reduce using rule 14 (init_declarator_list)


state 42

    5 function_definition: declaration_specifiers declarator . compound_statement
   16 init_declarator: declarator .
   17                | declarator . '=' initializer

    '='  shift, and go to state 64
    '{'  shift, and go to state 65

    $default  reduce using rule 16 (init_declarator)

    compound_statement  go to state 66


state 43

   40 declarator: direct_declarator .
   43 direct_declarator: direct_declarator . '(' ')'
   44                  | direct_declarator . '(' parameter_list ')'
   45                  | direct_declarator . '[' ']'
   46                  | direct_declarator . '[' constant_expression ']'

    '('  shift, and go to state 67
    '['  shift, and go to state 68

    $default  reduce using rule 40 (declarator)


state 44

   39 declarator: pointer . direct_declarator

    IDENTIFIER  shift, and go to state 34
    '('         shift, and go to state 37

    direct_declarator  go to state 69


state 45

   10 declaration_specifiers: storage_class_specifier declaration_specifiers .

    $default  reduce using rule 10 (declaration_specifiers)


state 46

    9 declaration_specifiers: type_specifier declaration_specifiers .

    $default  reduce using rule 9 (declaration_specifiers)


state 47

   64 struct_or_union_specifier: struct_or_union IDENTIFIER . '{' struct_declaration_list '}'
   65                          | struct_or_union IDENTIFIER .

    '{'  shift, and go to state 70

    $default  reduce using rule 65 (struct_or_union_specifier)


state 48

   63 struct_or_union_specifier: struct_or_union '{' . struct_declaration_list '}'

    IDENTIFIER  shift, and go to state 1
    RESTRICT    shift, and go to state 54
    CHAR        shift, and go to state 7
    SHORT       shift, and go to state 8
    INT         shift, and go to state 9
    LONG        shift, and go to state 10
    SIGNED      shift, and go to state 11
    UNSIGNED    shift, and go to state 12
    FLOAT       shift, and go to state 13
    DOUBLE      shift, and go to state 14
    CONST       shift, and go to state 55
    VOLATILE    shift, and go to state 56
    VOID        shift, and go to state 15
    INT64       shift, and go to state 16
    STRUCT      shift, and go to state 17
    UNION       shift, and go to state 18
    ENUM        shift, and go to state 19

    type_specifier             go to state 71
    type_qualifier             go to state 72
    enum_specifier             go to state 27
    struct_or_union_specifier  go to state 28
    struct_or_union            go to state 29
    struct_declaration_list    go to state 73
    struct_declaration         go to state 74
    specifier_qualifier_list   go to state 75


state 49

   57 enum_specifier: ENUM IDENTIFIER '{' . enumerator_list '}'

    IDENTIFIER  shift, and go to state 50

    enumerator_list  go to state 76
    enumerator       go to state 52


state 50

   61 enumerator: IDENTIFIER .
   62           | IDENTIFIER . '=' constant_expression

    '='  shift, and go to state 77

    $default  reduce using rule 61 (enumerator)


state 51

   56 enum_specifier: ENUM '{' enumerator_list . '}'

    '}'  shift, and go to state 78


state 52

   59 enumerator_list: enumerator .
   60                | enumerator . ',' enumerator_list

    ','  shift, and go to state 79

    $default  reduce using rule 59 (enumerator_list)


state 53

   42 direct_declarator: '(' declarator . ')'

    ')'  shift, and go to state 80


state 54

   38 type_qualifier: RESTRICT .

    $default  reduce using rule 38 (type_qualifier)


state 55

   36 type_qualifier: CONST .

    $default  reduce using rule 36 (type_qualifier)


state 56

   37 type_qualifier: VOLATILE .

    $default  reduce using rule 37 (type_qualifier)


state 57

   53 type_qualifier_list: type_qualifier .

    $default  reduce using rule 53 (type_qualifier_list)


state 58

   49 pointer: '*' pointer .

    $default  reduce using rule 49 (pointer)


state 59

   48 pointer: '*' type_qualifier_list .
   50        | '*' type_qualifier_list . pointer
   54 type_qualifier_list: type_qualifier_list . type_qualifier

    RESTRICT  shift, and go to state 54
    CONST     shift, and go to state 55
    VOLATILE  shift, and go to state 56
    '*'       shift, and go to state 38

    $default  reduce using rule 48 (pointer)

    type_qualifier  go to state 81
    pointer         go to state 82


state 60

    6 declaration: declaration_specifiers attribute_specifier init_declarator_list . ';'

    ';'  shift, and go to state 83


state 61

   16 init_declarator: declarator .
   17                | declarator . '=' initializer

    '='  shift, and go to state 64

    $default  reduce using rule 16 (init_declarator)


state 62

    7 declaration: declaration_specifiers init_declarator_list ';' .
   55            | declaration_specifiers init_declarator_list ';' .
